[package]
name = "fmutex"
version = "0.0.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "Provides mutual exclusion on a file using flock(2)"
readme = "README.md"
repository = "https://github.com/rossmacarthur/fmutex"
license = "MIT OR Apache-2.0"
keywords = ["file", "lock", "mutex", "flock", "fcntl"]
categories = ["concurrency", "filesystem"]

[dependencies]
libc = "0.2.117"

[dev-dependencies]
temp-dir = "0.1.11"
